fix: hidden overflow

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   background-color: #0d1117;
   color: #c9d1d9;
   font-family: 'Space Grotesk', sans-serif;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 /* Header */
